Add a TakeCommand test

--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,6 @@
 SLACK_TOKEN=what_a_slacker
 HEROKU_API_KEY=because_heroku
 SLACK_URL="https://slack-is-the-best.com"
+GITHUB_TOKEN=109fuadmneipgel82nf5tvs33otme4mmwredft3bj
+GITHUB_USER=kkuchta
+GITHUB_REPO=kkuchta/bub
